Fix decompilation of let expressions and statements. bug 344601, r=brendan